# solana-contract

./: .gitignore  ActivityService.sol  Anchor.toml  LICENSE  PROJECT_SUMMARY.md  README.md  package.json  tsconfig.json
programs/activity-service/: Cargo.toml
programs/activity-service/src/: lib.rs
programs/s1/: Cargo.toml  README.md
programs/s1/src/: lib.rs
scripts/: check_all_program_ids.js  demonstrate_mismatch.js  deploy.js  example.js  explain_program_id.js  program_id_flow.md  test.js  test_s1.js  verify_program_id.js
