[package]
name = "s1"
version = "0.1.0"
description = "Simple Counter Program"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", default-features = false, features = ["token"] }

[lints.rust]
unexpected_cfgs = "allow"